--- a/Raven.Storage.Esent/Raven.Storage.Esent.csproj
+++ b/Raven.Storage.Esent/Raven.Storage.Esent.csproj
@@ -64,6 +64,7 @@
     <Compile Include="EsentExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchemaCreator.cs" />
+    <Compile Include="SchemaUpdates\From36To37.cs" />
     <Compile Include="SchemaUpdates\From35To36.cs" />
     <Compile Include="SchemaUpdates\From34To35.cs" />
     <Compile Include="SchemaUpdates\From32To33.cs" />
