More work on reduce groups

--- a/Raven.Database/Raven.Database.csproj
+++ b/Raven.Database/Raven.Database.csproj
@@ -419,7 +419,7 @@
     <Compile Include="Server\Responders\TransactionRollback.cs" />
     <Compile Include="Server\Responders\TransactionStatus.cs" />
     <Compile Include="Storage\DocumentInTransactionData.cs" />
-    <Compile Include="Storage\GetMappedResultsParams.cs" />
+    <Compile Include="Storage\GetMapReduceResults.cs" />
     <Compile Include="Storage\IAttachmentsStorageActions.cs" />
     <Compile Include="Storage\IDocumentStorageActions.cs" />
     <Compile Include="Storage\IGeneralStorageActions.cs" />
