--- a/Raven.Storage.Managed/Raven.Storage.Managed.csproj
+++ b/Raven.Storage.Managed/Raven.Storage.Managed.csproj
@@ -38,6 +38,10 @@
     <AssemblyOriginatorKeyFile>..\Raven.Database\RavenDB.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Lucene.Net, Version=2.9.4.1, Culture=neutral, PublicKeyToken=85089178b9ac3181, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\SharedLibs\Lucene.Net.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.0.8.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.4.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
@@ -60,6 +64,7 @@
     <Compile Include="Backup\BackupOperation.cs" />
     <Compile Include="Backup\RestoreOperation.cs" />
     <Compile Include="DocumentsStorageActions.cs" />
+    <Compile Include="ErrorLoggingMergeScheduler.cs" />
     <Compile Include="GeneralStorageActions.cs" />
     <Compile Include="Impl\TableStorage.cs" />
     <Compile Include="IndexingStorageActions.cs" />
